// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`map component passess all props to MapWithAMakredInfoWindow component 1`] = `
<withStateHandlers(withScriptjs(withGoogleMap(lifecycle(Component))))
  containerElement={
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  }
  disableMarkers={Array []}
  fetchIndicators={[Function]}
  googleMapURL="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3kGdvwWFXzY4O0sg-pBzwFae51hFfguQ&v=3.exp&libraries=geometry,drawing,places"
  indicators={
    Array [
      Object {
        "city": "Jelenia Góra 58-500",
        "country": "Polska",
        "icon": "1548784752159.png",
        "id": 2,
        "lat": 50.92841093800815,
        "lng": 15.640584390869208,
        "name": "test1",
        "street": "Unnamed Road",
        "userId": 1,
      },
      Object {
        "city": "Jelenia Góra 58-500",
        "country": " Polska",
        "icon": "1548784752159.png",
        "id": 3,
        "lat": 50.933387715648635,
        "lng": 15.840054910888739,
        "name": "test1",
        "street": "Unnamed Road",
        "userId": 1,
      },
    ]
  }
  isNavSelect={true}
  loadingElement={
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  }
  mapElement={
    <div
      style={
        Object {
          "height": "100%",
        }
      }
    />
  }
  postIndicator={[Function]}
  removeIndicator={[Function]}
  selectedIndicator=""
  selectedMarker={
    Object {
      "icon": "1548784752159.png",
      "id": 1,
      "name": "test1",
      "userId": 1,
    }
  }
/>
`;

exports[`map component passess all props to map component 1`] = `
<div>
  <withProps(withStateHandlers(withScriptjs(withGoogleMap(lifecycle(Component)))))
    addIndicator={[Function]}
    disableMarkers={Array []}
    indicators={
      Array [
        Object {
          "city": "Jelenia Góra 58-500",
          "country": "Polska",
          "icon": "1548784752159.png",
          "id": 2,
          "lat": 50.92841093800815,
          "lng": 15.640584390869208,
          "name": "test1",
          "street": "Unnamed Road",
          "userId": 1,
        },
        Object {
          "city": "Jelenia Góra 58-500",
          "country": " Polska",
          "icon": "1548784752159.png",
          "id": 3,
          "lat": 50.933387715648635,
          "lng": 15.840054910888739,
          "name": "test1",
          "street": "Unnamed Road",
          "userId": 1,
        },
      ]
    }
    removeMarker={[Function]}
    selectedIndicator=""
    selectedMarker={
      Object {
        "icon": "1548784752159.png",
        "id": 1,
        "name": "test1",
        "userId": 1,
      }
    }
  />
</div>
`;
